Updating tracewin importer to export new correctors and fixing two bugs: exporting fieldmaps and dealing with elements inside a DTL tank.